--- a/styles.scss
+++ b/styles.scss
@@ -1,11 +1,12 @@
 $color_1: #FF6F40;
+$color_2: #fff;
 
 body{
     background-color: rgb(192, 188, 184);
 }
 
 nav {
-    background-color:#fff;
+    background-color:$color_2;
     max-width: 1240px;
     max-height: 154px;
     margin: 0 auto;
@@ -30,10 +31,11 @@ nav {
     }
 }
 header {
-    
     button {
+        margin: 0 auto;
         width: 215px;
         height: 56px;
+        
     }
     span{
         color: $color_1;
@@ -41,7 +43,7 @@ header {
     >div{
         margin: 0 auto;
         max-width: 1240px;
-        background-color:#fff;
+        background-color:$color_2;
         .btn{
             background-color:#5A9A5B ;
             &:hover{
@@ -50,4 +52,24 @@ header {
         
     }
 }
+}
+
+.foto {
+    margin: 0 auto;
+    max-width: 1240px;
+    background-color: $color_2;
+    display: flex;
+    
+    justify-content: center; 
+    align-items: center;  
+    flex-direction: row; 
+    flex-wrap: wrap; 
+    align-content: center;
+    figure {
+        margin: 30px 10px;
+        img{
+           max-width: 280px;
+           max-height: 500px;
+        }
+    }
 }
