--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,13 @@
 $color_1: #FF6F40;
 $color_2: #fff;
 
+html {
+    box-sizing: border-box;
+  }
+*, *::before, *::after {
+    box-sizing: inherit;
+  }
+
 body{
     background-color: rgb(192, 188, 184);
 }
@@ -12,12 +19,6 @@ nav {
     margin: 0 auto;
     padding: 0 244px;
     
-    .navbar{
-    
-    }
-    .container-fluid{
-
-    }
     .collapse{
         justify-content: flex-end;
     }
@@ -55,11 +56,7 @@ header {
 }
 
 .foto {
-    margin: 0 auto;
-    max-width: 1240px;
-    background-color: $color_2;
     display: flex;
-    
     justify-content: center; 
     align-items: center;  
     flex-direction: row; 
@@ -70,7 +67,56 @@ header {
         img{
            max-width: 280px;
            max-height: 500px;
-           
         }
     }
 }
+section {
+    margin: 0 auto;
+    max-width: 1240px;
+    background-color: $color_2;
+}
+.content {
+    max-width: 604px;
+    max-height: 452px;
+    padding-left: 70px;
+    padding-right: 70px;
+    h1{
+        margin-bottom: 40px;
+        span{
+            color: $color_1;
+            
+        }
+    }
+    p{
+        margin-bottom: 60px;
+    }
+    div {
+        display: flex;
+        justify-content: center; 
+        div{
+            flex-wrap: wrap;
+        }
+    }
+}
+.content2 {
+    display: flex;
+    justify-content: center; 
+    align-items: center;  
+    flex-direction: row; 
+    flex-wrap: wrap; 
+    align-content: center;
+    padding-top: 100px;
+        .content3{
+            display: flex;
+            justify-content: flex-end; 
+            align-items: flex-end;
+            flex-direction: column;
+            justify-content: space-between; 
+            min-width: 604px;
+            min-height: 452px;
+            background-image: url(/img/unsplash_sQopSb2K0CU.png);
+            background-repeat: no-repeat;
+        }
+}
+
+
