--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,14 @@ body {
   background-color: rgb(192, 188, 184);
 }
 
+section {
+  margin: 0 auto;
+  max-width: 1728px;
+  background-color: #fff;
+  padding-bottom: 50px;
+  padding-top: 50px;
+}
+
 nav {
   background-color: #fff;
   max-width: 1728px;
@@ -74,12 +82,6 @@ header > div .btn:hover {
   max-height: 500px;
 }
 
-section {
-  margin: 0 auto;
-  max-width: 1728px;
-  background-color: #fff;
-}
-
 .content {
   max-width: 604px;
   max-height: 452px;
@@ -87,7 +89,7 @@ section {
   padding-right: 20px;
 }
 .content h1 {
-  margin-bottom: 20px;
+  margin-bottom: 60px;
 }
 .content h1 span {
   color: #FF6F40;
@@ -145,6 +147,7 @@ section {
 }
 .content4 h1 {
   text-align: center;
+  margin-bottom: 60px;
 }
 .content4 h1 span {
   color: #FF6F40;
@@ -170,8 +173,14 @@ section {
     padding-right: 10px;
   }
 }
+.content5 article h1 {
+  margin-bottom: 60px;
+}
 .content5 article h1 span {
   color: #FF6F40;
+}
+.content5 article p {
+  margin-bottom: 60px;
 }
 .content5 article div {
   display: flex;
@@ -183,4 +192,97 @@ section {
   margin: 0 auto;
   max-height: 411px;
   max-width: 385px;
+  margin-bottom: 30px;
+}
+.content5 article div figure img {
+  margin-bottom: 30px;
+}
+.content5 article div figure h3 {
+  margin-bottom: 30px;
+}
+
+.content6 {
+  padding-left: 244px;
+  padding-right: 244px;
+}
+@media (min-width: 400px) and (max-width: 1718px) {
+  .content6 {
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+}
+.content6 > div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+}
+.content6 > div h1 {
+  min-height: 192px;
+  max-width: 604px;
+}
+.content6 > div h1 span {
+  color: #FF6F40;
+}
+.content6 > div div {
+  justify-content: flex-start;
+  min-height: 192px;
+  max-width: 604px;
+}
+.content6 button {
+  width: 215px;
+  height: 56px;
+  background-color: #5A9A5B;
+}
+.content6 button:hover {
+  background-color: #FF6F40;
+}
+.content6 figure {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-content: center;
+  margin: 0 auto;
+}
+.content6 figure .img1 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: stretch;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(/img/card\ \(1\).png);
+  background-repeat: no-repeat;
+  min-height: 590px;
+  max-width: 370px;
+  color: #fff;
+}
+.content6 figure .img2 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: stretch;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(/img/card\ \(2\).png);
+  background-repeat: no-repeat;
+  flex-direction: column;
+  min-height: 590px;
+  max-width: 370px;
+  color: #fff;
+}
+.content6 figure .img3 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: stretch;
+  flex-direction: column;
+  align-items: center;
+  background-image: url(/img/card\ \(3\).png);
+  background-repeat: no-repeat;
+  flex-direction: column;
+  min-height: 590px;
+  max-width: 370px;
+  color: #fff;
 }/*# sourceMappingURL=styles.css.map */
