--- a/styles.scss
+++ b/styles.scss
@@ -11,6 +11,13 @@ html {
 body{
     background-color: rgb(192, 188, 184);
 }
+section {
+    margin: 0 auto;
+    max-width: 1728px;
+    background-color: $color_2;
+    padding-bottom: 50px;
+    padding-top: 50px;
+}
 
 nav {
     background-color:$color_2;
@@ -78,18 +85,14 @@ header {
         }
     }
 }
-section {
-    margin: 0 auto;
-    max-width: 1728px;
-    background-color: $color_2;
-}
+
 .content {
     max-width: 604px;
     max-height: 452px;
     margin-bottom: 50px;
     padding-right: 20px;
     h1{
-        margin-bottom: 20px;
+        margin-bottom: 60px;
         span{
             color: $color_1;
             
@@ -142,6 +145,7 @@ section {
     }
    h1{
     text-align: center;
+    margin-bottom: 60px;
     span{
         color: $color_1;
     }
@@ -168,10 +172,15 @@ section {
             padding-right: 10px;
         }
         h1{
+            margin-bottom: 60px;
             span{
                 color: $color_1;
             }
-    }   div{
+        }   
+        p{
+           margin-bottom: 60px;     
+        }
+        div{
         display: flex;
         justify-content: center;  
         flex-direction: row; 
@@ -181,10 +190,99 @@ section {
             margin: 0 auto;
             max-height: 411px;
             max-width: 385px;
-            
+            margin-bottom: 30px;
+                img {
+                margin-bottom: 30px;
+                }
+                h3{
+                margin-bottom: 30px;
+                }      
+            }  
+        }
     }
-        
+}
 
+.content6 {
+    padding-left: 244px;
+    padding-right: 244px;
+    @media (min-width: 400px) and (max-width: 1718px) {
+        padding-left: 10px;
+        padding-right: 10px;
     }
+    >div {
+        display: flex;
+        justify-content: center; 
+        align-items: center;  
+        flex-direction: row; 
+        flex-wrap: wrap; 
+        align-content: center;
+        h1{
+            min-height: 192px;
+            max-width: 604px;
+            span{
+                color: $color_1;
+            }
+        }
+        div{
+            justify-content:flex-start;
+            min-height: 192px;
+            max-width: 604px;
+        }
+    }
+    button{
+        width: 215px;
+        height: 56px;
+        background-color:#5A9A5B ;
+        &:hover{
+        background-color: $color_1;
+        }
+    }
+    figure{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;  
+        flex-direction: row; 
+        flex-wrap: wrap; 
+        align-content: center;
+        margin: 0 auto;
+        .img1{
+            display: flex;
+            justify-content: flex-end; 
+            align-items: stretch; 
+            flex-direction: column;
+            align-items: center; 
+            background-image: url(/img/card\ \(1\).png);
+            background-repeat: no-repeat;
+            min-height: 590px;
+            max-width: 370px;
+            color: $color_2;
+        }
+        .img2{
+            display: flex;
+            justify-content: flex-end; 
+            align-items: stretch; 
+            flex-direction: column;
+            align-items: center;  
+            background-image: url(/img/card\ \(2\).png);
+            background-repeat: no-repeat;
+            flex-direction:column;
+            min-height: 590px;
+            max-width: 370px;
+            color: $color_2;
+        }
+        .img3{
+            display: flex;
+            justify-content: flex-end; 
+            align-items: stretch; 
+            flex-direction: column;
+            align-items: center; 
+            background-image: url(/img/card\ \(3\).png);
+            background-repeat: no-repeat;
+            flex-direction:column;
+            min-height: 590px;
+            max-width: 370px;
+            color: $color_2;
+            
+        }
     }
 }
