--- a/styles.scss
+++ b/styles.scss
@@ -216,6 +216,7 @@ header {
         flex-direction: row; 
         flex-wrap: wrap; 
         align-content: center;
+        margin-bottom: 60px;
         h1{
             min-height: 192px;
             max-width: 604px;
@@ -245,6 +246,7 @@ header {
         flex-wrap: wrap; 
         align-content: center;
         margin: 0 auto;
+        margin-bottom: 100px;
         .img1{
             display: flex;
             justify-content: flex-end; 
@@ -256,6 +258,7 @@ header {
             min-height: 590px;
             max-width: 370px;
             color: $color_2;
+            border-radius: 30px;
         }
         .img2{
             display: flex;
@@ -269,6 +272,7 @@ header {
             min-height: 590px;
             max-width: 370px;
             color: $color_2;
+            border-radius: 30px;
         }
         .img3{
             display: flex;
@@ -282,7 +286,115 @@ header {
             min-height: 590px;
             max-width: 370px;
             color: $color_2;
+            border-radius: 30px;
             
         }
     }
+}
+
+
+.content7{
+    padding-left: 244px;
+    padding-right: 244px;
+    @media (min-width: 400px) and (max-width: 1718px) {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+        >div{
+            display: flex;
+            justify-content: space-between; 
+            flex-direction: row; 
+            flex-wrap: wrap; 
+            margin-bottom: 30px;
+            h1{
+                min-height: 96px;
+                max-width: 391px;
+            }
+            >p{
+                min-height: 96px;
+                max-width: 742px;
+            }
+        }
+}
+
+.menu{
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    flex-direction: row; 
+    flex-wrap: wrap; 
+    align-content: stretch;
+    >div{
+    
+    }
+    figure{
+        height: 384px;
+        width: 286px;
+        display: flex;
+        justify-content: space-between;  
+        flex-direction: column; 
+        flex-wrap: wrap; 
+        align-content: center;
+        figcaption{
+        }
+            div{
+                display: flex;
+                justify-content: space-evenly;
+                align-items: center;  
+                flex-direction: row; 
+                flex-wrap: wrap; 
+                align-content:center;
+                button{
+                    &:hover{
+                    background-color: $color_1;}
+                }
+            }
+        }
+    }
+
+.content8{
+    padding-left: 244px;
+    padding-right: 244px;
+    @media (min-width: 400px) and (max-width: 1718px) {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    >div{
+        display: flex;
+        justify-content: space-between; 
+        align-items: center; 
+        flex-direction: row; 
+        flex-wrap: wrap; 
+        align-content: center;
+        div{
+            h1{
+                margin-bottom: 40px;
+            }
+            width: 500px;
+            height: 500px;
+        }
+        .text{
+            display: flex;
+            justify-content: space-between; 
+            align-items: stretch;  
+            flex-direction: column; 
+            flex-wrap: wrap; 
+            align-content: stretch;
+            width: 600px;
+            height: 350px;
+            
+            img{
+                height: 74px;
+                width: 74px;
+            }
+            div{
+                display: flex;
+                justify-content: center;  
+                flex-direction: column;  
+                h3{
+                    margin-bottom: 30px;
+                }
+            }
+        }
+    }    
 }
