--- a/styles.scss
+++ b/styles.scss
@@ -17,6 +17,12 @@ section {
     background-color: $color_2;
     padding-bottom: 50px;
     padding-top: 50px;
+    padding-left: 244px;
+    padding-right: 244px;
+    @media (min-width: 370px) and (max-width: 1718px) {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
 
 nav {
@@ -25,9 +31,6 @@ nav {
     max-height: 154px;
     margin: 0 auto;
     padding: 0 244px;
-    div{
-
-    }
     
     .collapse{
         justify-content: flex-end;
@@ -66,20 +69,13 @@ header {
 }
 
 .foto {
-    padding-left: 244px;
-    padding-right: 244px;
+   
     display: flex;
     justify-content: center; 
     align-items: center;  
     flex-direction: row; 
     flex-wrap: wrap; 
     align-content: center;
-    @media (min-width: 480px) and (max-width: 1718px) {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
-    
-
     figure {
         margin: 0 auto;
         img{
@@ -89,7 +85,7 @@ header {
     }
 }
 
-.content {
+.content2 {
     max-width: 604px;
     max-height: 452px;
     margin-bottom: 50px;
@@ -113,7 +109,7 @@ header {
         }
     }
 }
-.content2 {
+.content {
     display: flex;
     justify-content: center; 
     align-items: center;  
@@ -121,12 +117,6 @@ header {
     flex-wrap: wrap; 
     align-content: center;
     padding-top: 100px;
-    padding-left: 244px;
-    padding-right: 244px;
-    @media (min-width: 480px) and (max-width: 1718px) {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
         .content3{
             display: flex;
             justify-content: flex-end; 
@@ -137,15 +127,16 @@ header {
             min-height: 452px;
             background-image: url(/img/unsplash_sQopSb2K0CU.png);
             background-repeat: no-repeat;
+            @media (min-width: 375px) and (max-width: 600px) {
+               
+            }
         }
 }
 .content4 {
-    padding-left: 244px;
-    padding-right: 244px;
-    @media (min-width: 480px) and (max-width: 1718px) {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+    display: flex;
+        justify-content: center;  
+        flex-direction: row; 
+        flex-wrap: wrap; 
    h1{
     text-align: center;
     margin-bottom: 60px;
@@ -154,7 +145,6 @@ header {
     }
    }
    div{
-    
     display: flex;
     justify-content: center;  
     flex-wrap: wrap; 
@@ -168,13 +158,7 @@ header {
 
 .content5 {
     article {
-        padding-left: 244px;
-        padding-right: 244px;
-        @media (min-width: 480px) and (max-width: 1718px) {
-            padding-left: 10px;
-            padding-right: 10px;
-        }
-        h1{
+        h1{ 
             margin-bottom: 60px;
             span{
                 color: $color_1;
@@ -188,7 +172,7 @@ header {
         justify-content: center;  
         flex-direction: row; 
         flex-wrap: wrap; 
-        
+
             figure {
             margin: 0 auto;
             max-height: 411px;
@@ -206,12 +190,6 @@ header {
 }
 
 .content6 {
-    padding-left: 244px;
-    padding-right: 244px;
-    @media (min-width: 400px) and (max-width: 1718px) {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
     >div {
         display: flex;
         justify-content: center; 
@@ -297,12 +275,6 @@ header {
 
 
 .content7{
-    padding-left: 244px;
-    padding-right: 244px;
-    @media (min-width: 400px) and (max-width: 1718px) {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
         >div{
             display: flex;
             justify-content: space-between; 
@@ -327,9 +299,6 @@ header {
     flex-direction: row; 
     flex-wrap: wrap; 
     align-content: stretch;
-    >div{
-    
-    }
     figure{
         height: 384px;
         width: 286px;
@@ -338,8 +307,6 @@ header {
         flex-direction: column; 
         flex-wrap: wrap; 
         align-content: center;
-        figcaption{
-        }
             div{
                 display: flex;
                 justify-content: space-evenly;
@@ -356,12 +323,6 @@ header {
     }
 
 .content8{
-    padding-left: 244px;
-    padding-right: 244px;
-    @media (min-width: 400px) and (max-width: 1718px) {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
     >div{
         display: flex;
         justify-content: space-between; 
@@ -402,13 +363,7 @@ header {
     }    
 }
 
-.content9 {
-    padding-left: 244px;
-    padding-right: 244px;
-    @media (min-width: 400px) and (max-width: 1718px) {
-        padding-left: 10px;
-        padding-right: 10px;
-    }
+.address {
     >div{
         display: flex;
         justify-content: space-between; 
