--- a/styles.scss
+++ b/styles.scss
@@ -1,6 +1,7 @@
 $color_1: #FF6F40;
 $color_2: #fff;
 
+
 %flex-row {
     display: flex;
     justify-content: center; 
@@ -16,6 +17,13 @@ $color_2: #fff;
     flex-wrap: wrap; 
     align-content: center;
 }
+@mixin media-width($max-width) {
+    @media (min-width: 375px) and (max-width: 1320px) {
+        max-width: $max-width;
+        margin: auto;
+        margin-bottom: 50px;
+    }
+}
 
 @mixin img($background-image) {
     display: flex;
@@ -29,6 +37,7 @@ $color_2: #fff;
     max-width: 370px;
     color: $color_2;
     border-radius: 30px;
+    margin: 20px;
 }
 
 html {
@@ -39,7 +48,7 @@ html {
   }
 
 body{
-    background-color: rgb(192, 188, 184);
+    background-color: rgb(208, 202, 195);
 }
 section {
     margin: 0 auto;
@@ -102,56 +111,61 @@ header {
     @extend %flex-row;
     figure {
         margin: 0 auto;
+        margin-bottom: 20px;
         img{
            max-width: 300px;
            max-height: 500px;
         }
     }
 }
-
-.content2 {
-    max-width: 604px;
-    max-height: 452px;
-    margin-bottom: 50px;
-    padding-right: 20px;
-    h1{
-        margin-bottom: 60px;
-        span{
-            color: $color_1;
-            
-        }
-    }
-    p{
-        margin-bottom: 30px;
-    }
-    div {
-        display: flex;
-        div{
-            margin-right: 20px;
-            flex-wrap: wrap;
-            margin-top: 20px;
-        }
-    }
-}
 .content {
     @extend %flex-row;
     padding-top: 100px;
-        .content3{
-            display: flex;
-            justify-content: flex-end; 
-            align-items: flex-end;
-            flex-direction: column;
-            justify-content: space-between; 
-            min-width: 604px;
-            min-height: 452px;
-            background-image: url(/img/unsplash_sQopSb2K0CU.png);
-            background-repeat: no-repeat;
-            @media (min-width: 375px) and (max-width: 600px) {
-               
+    padding-bottom: 100px;
+    .content2 {
+        max-width: 604px;
+        max-height: 452px;
+        margin-bottom: 100px;
+        padding-right: 20px;
+        h1{
+            margin-bottom: 60px;
+            span{
+                color: $color_1;
+                
             }
         }
+        p{
+            margin-bottom: 30px;
+        }
+        div {
+            display: flex;
+            div{
+                margin-right: 20px;
+                flex-wrap: wrap;
+                margin-top: 20px;
+            }
+        }
+    }
+    .content3{
+        display: flex;
+        justify-content: flex-end; 
+        align-items: flex-end;
+        flex-direction: column;
+        justify-content: space-between;
+        max-width: 100%; 
+        width: 604px;
+        height: 452px;
+        background-image: url(/img/unsplash_sQopSb2K0CU.png);
+        background-repeat: no-repeat;
+        
+        figure {
+            position:relative;
+        }
+    }
 }
+
 .content4 {
+    
    h1{
     text-align: center;
     margin-bottom: 60px;
@@ -185,6 +199,7 @@ header {
         }
         div{
             @extend %flex-row;
+            
             figure {
             margin: 0 auto;
             max-height: 411px;
@@ -203,11 +218,16 @@ header {
 
 .content6 {
     >div {
+        margin-bottom: 50px;
         @extend %flex-row;
-        margin-bottom: 60px;
+        @include media-width(80%);
+        
         h1{
             min-height: 192px;
             max-width: 604px;
+            @media(min-width: 370px) and (max-width: 1317px) {
+                min-height: 120px;
+            }
             span{
                 color: $color_1;
             }
@@ -216,28 +236,48 @@ header {
             justify-content:flex-start;
             min-height: 192px;
             max-width: 604px;
+            @media(min-width: 370px) and (max-width: 1260px) {
+                display: flex;
+                justify-content: space-between; 
+                align-items: center;  
+                flex-direction: column; 
+                flex-wrap: wrap; 
+                align-content: stretch;
+            }
+
         }
     }
     button{
         width: 215px;
         height: 56px;
         background-color:#5A9A5B ;
+        margin-top: 20px;
         &:hover{
         background-color: $color_1;
         }
     }
     figure{
         @extend %flex-row;
-        justify-content: space-between;        
+        display: flex;
+        justify-content: center;         
         margin: 0 auto;
         margin-bottom: 100px;
         .img1{
+            p{
+                text-align: center;
+            }
             @include img(url(/img/card\ \(1\).png));
         }
         .img2{
+            p{
+                text-align: center;
+            }
             @include img(url(/img/card\ \(2\).png));
         }
         .img3{
+            p{
+                text-align: center;
+            }
             @include img(url(/img/card\ \(3\).png));        
         }
     }
@@ -245,9 +285,14 @@ header {
 
 
 .content7 {
+    margin-top: 100px;
         >div{
             @extend %flex-row;
-            justify-content: space-between; 
+            justify-content: space-between;
+            @media(min-width: 370px) and (max-width: 745px) {
+                flex-direction: column;
+                justify-content: center; 
+            }
             margin-bottom: 30px;
             h1{
                 min-height: 96px;
@@ -262,6 +307,7 @@ header {
 
 .menu{
     @extend %flex-row;
+
     figure{
         border-radius: 27px;
         background: $color_2;
@@ -269,6 +315,7 @@ header {
         height: 384px;
         width: 286px;
         @extend %flex-column;
+        margin-bottom: 30px;
         img{
             border-radius: 27px 27px 0 0;
         }
@@ -351,7 +398,7 @@ form{
     @extend %flex-column;
     
     height: 530px;
-    width: 508px;
+    max-width: 100%;
         input{
             outline:0;
             color: #333333;
@@ -402,6 +449,37 @@ footer{
     }
     div,ul{
         @extend %flex-column;
+        justify-content:space-around;
         color: $color_2;
     }
 }
+  /* Стили Тёмной темы */
+  body.dark-theme {
+    color: #eee;
+    background: #121212;
+    header{
+        color: #eee;
+        div{
+            color: #eee;
+            background: #121212;
+            h1{
+                color: #eee;
+            }
+        }
+    }
+    nav{
+        color: #eee;
+        background: #121212;
+    }
+        section{
+        color: #eee;
+        background: #121212;
+        .content7{
+            figure{
+                color: #eee;
+                background: #121212;
+            }
+        }
+    }
+  }
+  
