--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 footer, .address .maps .text, .address > div, .content8 > div, .menu figure div, .menu, .content7 > div, .content6 figure, .content6 > div, .content5 article div, .content, .foto {
   display: flex;
   justify-content: center;
@@ -318,6 +317,7 @@ header > div .btn:hover {
 }
 .menu figure div {
   justify-content: space-evenly;
+  padding-bottom: 10px;
 }
 .menu figure div button:hover {
   background-color: #FF6F40;
@@ -355,7 +355,7 @@ header > div .btn:hover {
 
 .address > div {
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 .address > div h1 {
   min-height: 96px;
@@ -373,8 +373,13 @@ header > div .btn:hover {
   justify-content: space-between;
 }
 .address .maps .text div {
+  margin-bottom: 20px;
   width: 300px;
   height: 100px;
+}
+
+.mapswrapper {
+  margin-bottom: 20px;
 }
 
 form {
@@ -434,10 +439,16 @@ footer div, footer ul {
   color: #fff;
 }
 
-/* Стили Тёмной темы */
+/* Styles of a dark topic */
 body.dark-theme {
   color: #eee;
-  background: #121212;
+  background: #000000;
+}
+body.dark-theme a {
+  color: #eee;
+}
+body.dark-theme a:hover, body.dark-theme a:focus {
+  color: #FF6F40;
 }
 body.dark-theme header {
   color: #eee;
@@ -460,4 +471,98 @@ body.dark-theme section {
 body.dark-theme section .content7 figure {
   color: #eee;
   background: #121212;
+}
+body.dark-theme footer {
+  color: #eee;
+  background: #121212;
+}
+
+/* From Uiverse.io by Type-Delta */
+/* a clone from joshwcomeau.com 
+ * but this version runs on pure CSS
+ */
+.themeToggle {
+  color: #bbb;
+  width: 3em;
+}
+
+.st-sunMoonThemeToggleBtn {
+  position: relative;
+  cursor: pointer;
+}
+
+.st-sunMoonThemeToggleBtn .themeToggleInput {
+  opacity: 0;
+  width: 100%;
+  aspect-ratio: 1;
+}
+
+.st-sunMoonThemeToggleBtn svg {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transition: transform 0.4s ease;
+  transform: rotate(40deg);
+}
+
+.st-sunMoonThemeToggleBtn svg .sunMoon {
+  transform-origin: center center;
+  transition: inherit;
+  transform: scale(1);
+}
+
+.st-sunMoonThemeToggleBtn svg .sunRay {
+  transform-origin: center center;
+  transform: scale(0);
+}
+
+.st-sunMoonThemeToggleBtn svg mask > circle {
+  transition: transform 0.64s cubic-bezier(0.41, 0.64, 0.32, 1.575);
+  transform: translate(0px, 0px);
+}
+
+.st-sunMoonThemeToggleBtn svg .sunRay2 {
+  animation-delay: 0.05s !important;
+}
+
+.st-sunMoonThemeToggleBtn svg .sunRay3 {
+  animation-delay: 0.1s !important;
+}
+
+.st-sunMoonThemeToggleBtn svg .sunRay4 {
+  animation-delay: 0.17s !important;
+}
+
+.st-sunMoonThemeToggleBtn svg .sunRay5 {
+  animation-delay: 0.25s !important;
+}
+
+.st-sunMoonThemeToggleBtn svg .sunRay5 {
+  animation-delay: 0.29s !important;
+}
+
+.st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg {
+  transform: rotate(90deg);
+}
+
+.st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg mask > circle {
+  transform: translate(16px, -3px);
+}
+
+.st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg .sunMoon {
+  transform: scale(0.55);
+}
+
+.st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg .sunRay {
+  animation: showRay1832 0.4s ease 0s 1 forwards;
+}
+
+@keyframes showRay1832 {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
 }/*# sourceMappingURL=styles.css.map */
