--- a/styles.scss
+++ b/styles.scss
@@ -83,6 +83,11 @@ nav {
         background-color: $color_1;
     }
 }
+
+
+
+
+
 header {
     button {
         margin: 0 auto;
@@ -322,6 +327,7 @@ header {
             div{
                 @extend %flex-row;
                 justify-content: space-evenly;
+                padding-bottom: 10px;
                 button{
                     &:hover{
                     background-color: $color_1;}
@@ -370,7 +376,7 @@ header {
     >div{
         @extend %flex-row; 
         justify-content: space-between;
-        margin-bottom: 30px;
+        margin-bottom: 20px;
         h1{
             min-height: 96px;
             width: 530px;
@@ -388,11 +394,15 @@ header {
             @extend %flex-row;
             justify-content: space-between; 
            div{
+                margin-bottom: 20px;
                 width: 300px;
                 height: 100px;
            }
         }
     }
+}
+.mapswrapper {
+    margin-bottom: 20px;
 }
 form{
     @extend %flex-column;
@@ -453,10 +463,16 @@ footer{
         color: $color_2;
     }
 }
-  /* Стили Тёмной темы */
+  /* Styles of a dark topic */
   body.dark-theme {
     color: #eee;
-    background: #121212;
+    background: #000000;
+    a{
+        color: #eee;
+        &:hover,&:focus{
+            color: $color_1;
+        }
+    }
     header{
         color: #eee;
         div{
@@ -480,6 +496,93 @@ footer{
                 background: #121212;
             }
         }
+    }
+    footer {
+        color: #eee;
+        background: #121212;
+    }
+  }
+/* From Uiverse.io by Type-Delta */ 
+/* a clone from joshwcomeau.com 
+ * but this version runs on pure CSS
+ */
+
+ .themeToggle {
+    color: #bbb;
+    width: 3em;
+  }
+  
+  .st-sunMoonThemeToggleBtn {
+    position: relative;
+    cursor: pointer;
+  }
+  
+  .st-sunMoonThemeToggleBtn .themeToggleInput {
+    opacity: 0;
+    width: 100%;
+    aspect-ratio: 1;
+  }
+  
+  .st-sunMoonThemeToggleBtn svg {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: transform 0.4s ease;
+    transform: rotate(40deg);
+  }
+  
+  .st-sunMoonThemeToggleBtn svg .sunMoon {
+    transform-origin: center center;
+    transition: inherit;
+    transform: scale(1);
+  }
+  
+  .st-sunMoonThemeToggleBtn svg .sunRay {
+    transform-origin: center center;
+    transform: scale(0);
+  }
+  
+  .st-sunMoonThemeToggleBtn svg mask > circle {
+    transition: transform 0.64s cubic-bezier(0.41, 0.64, 0.32, 1.575);
+    transform: translate(0px, 0px);
+  }
+  
+  .st-sunMoonThemeToggleBtn svg .sunRay2 {
+    animation-delay: 0.05s !important;
+  }
+  .st-sunMoonThemeToggleBtn svg .sunRay3 {
+    animation-delay: 0.1s !important;
+  }
+  .st-sunMoonThemeToggleBtn svg .sunRay4 {
+    animation-delay: 0.17s !important;
+  }
+  .st-sunMoonThemeToggleBtn svg .sunRay5 {
+    animation-delay: 0.25s !important;
+  }
+  .st-sunMoonThemeToggleBtn svg .sunRay5 {
+    animation-delay: 0.29s !important;
+  }
+  
+  .st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg {
+    transform: rotate(90deg);
+  }
+  .st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg mask > circle {
+    transform: translate(16px, -3px);
+  }
+  .st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg .sunMoon {
+    transform: scale(0.55);
+  }
+  .st-sunMoonThemeToggleBtn .themeToggleInput:checked + svg .sunRay {
+    animation: showRay1832 0.4s ease 0s 1 forwards;
+  }
+  
+  @keyframes showRay1832 {
+    0% {
+      transform: scale(0);
+    }
+    100% {
+      transform: scale(1);
     }
   }
   
